// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`octotaskView > not providing parameters 1`] = `
"<!DOCTYPE html>
<html lang="en" class="height-full" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Your App | built with Octotask</title>
    <link rel="icon" href="/octotask/static/octotask-head.png">
    <link rel="stylesheet" href="/octotask/static/primer.css">
  </head>
  <body class="height-full bg-gray-light">
    <div class="d-flex flex-column flex-justify-center flex-items-center text-center height-full">
      <img src="/octotask/static/robot.svg" alt="Octotask Logo" width="100" class="mb-6">
      <div class="box-shadow rounded-2 border p-6 bg-white">
        <h1>
          Welcome to your Octotask App
        </h1>

          <p>This bot was built using <a href="https://github.com/octotask/octotask">Octotask</a>, a framework for building GitHub Apps.</p>
      </div>

      <div class="mt-4">
        <h4 class="alt-h4 text-gray-light">Need help?</h4>
        <div class="d-flex flex-justify-center mt-2">
          <a href="https://octotask.github.io/docs/" class="btn btn-outline mr-2">Documentation</a>
          <a href="https://github.com/octotask/octotask/discussions" class="btn btn-outline">Discuss on GitHub</a>
        </div>
      </div>
    </div>
  </body>
</html>"
`;

exports[`octotaskView > providing description 1`] = `
"<!DOCTYPE html>
<html lang="en" class="height-full" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Your App | built with Octotask</title>
    <link rel="icon" href="/octotask/static/octotask-head.png">
    <link rel="stylesheet" href="/octotask/static/primer.css">
  </head>
  <body class="height-full bg-gray-light">
    <div class="d-flex flex-column flex-justify-center flex-items-center text-center height-full">
      <img src="/octotask/static/robot.svg" alt="Octotask Logo" width="100" class="mb-6">
      <div class="box-shadow rounded-2 border p-6 bg-white">
        <h1>
          Welcome to your Octotask App
        </h1>

          <p>My App with Octotask</p>
      </div>

      <div class="mt-4">
        <h4 class="alt-h4 text-gray-light">Need help?</h4>
        <div class="d-flex flex-justify-center mt-2">
          <a href="https://octotask.github.io/docs/" class="btn btn-outline mr-2">Documentation</a>
          <a href="https://github.com/octotask/octotask/discussions" class="btn btn-outline">Discuss on GitHub</a>
        </div>
      </div>
    </div>
  </body>
</html>"
`;

exports[`octotaskView > providing description 2`] = `
"<!DOCTYPE html>
<html lang="en" class="height-full" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Your App | built with Octotask</title>
    <link rel="icon" href="/octotask/static/octotask-head.png">
    <link rel="stylesheet" href="/octotask/static/primer.css">
  </head>
  <body class="height-full bg-gray-light">
    <div class="d-flex flex-column flex-justify-center flex-items-center text-center height-full">
      <img src="/octotask/static/robot.svg" alt="Octotask Logo" width="100" class="mb-6">
      <div class="box-shadow rounded-2 border p-6 bg-white">
        <h1>
          Welcome to your Octotask App
            <span class="Label Label--outline v-align-middle ml-2 text-gray-light">v1.0.0</span>
        </h1>

          <p>This bot was built using <a href="https://github.com/octotask/octotask">Octotask</a>, a framework for building GitHub Apps.</p>
      </div>

      <div class="mt-4">
        <h4 class="alt-h4 text-gray-light">Need help?</h4>
        <div class="d-flex flex-justify-center mt-2">
          <a href="https://octotask.github.io/docs/" class="btn btn-outline mr-2">Documentation</a>
          <a href="https://github.com/octotask/octotask/discussions" class="btn btn-outline">Discuss on GitHub</a>
        </div>
      </div>
    </div>
  </body>
</html>"
`;

exports[`octotaskView > providing name 1`] = `
"<!DOCTYPE html>
<html lang="en" class="height-full" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>My App | built with Octotask</title>
    <link rel="icon" href="/octotask/static/octotask-head.png">
    <link rel="stylesheet" href="/octotask/static/primer.css">
  </head>
  <body class="height-full bg-gray-light">
    <div class="d-flex flex-column flex-justify-center flex-items-center text-center height-full">
      <img src="/octotask/static/robot.svg" alt="Octotask Logo" width="100" class="mb-6">
      <div class="box-shadow rounded-2 border p-6 bg-white">
        <h1>
          Welcome to My App
        </h1>

          <p>This bot was built using <a href="https://github.com/octotask/octotask">Octotask</a>, a framework for building GitHub Apps.</p>
      </div>

      <div class="mt-4">
        <h4 class="alt-h4 text-gray-light">Need help?</h4>
        <div class="d-flex flex-justify-center mt-2">
          <a href="https://octotask.github.io/docs/" class="btn btn-outline mr-2">Documentation</a>
          <a href="https://github.com/octotask/octotask/discussions" class="btn btn-outline">Discuss on GitHub</a>
        </div>
      </div>
    </div>
  </body>
</html>"
`;
